working auth example

--- a/Webapi/appsettings.json
+++ b/Webapi/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "DEXTER WAS THE BEST DOG IN THE WORLD.  ALFIE IS NOT BAD EITHER"
+  }
+
 }
